feat: 먹비티아이 먹적 기능 추가